2024-11-10T12:29:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11765128469 # 641
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-10
* notice: last 14d: unq all: 18 24
* notice: prev accum: outdated-unq outdated-all / unq all: 2275 4525 / 2297 4548
* notice: next accum: outdated-unq outdated-all / unq all: 2275 4525 / 2298 4549
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-11-10]

2024-11-10T01:21:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11760999494 # 640
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-10
* notice: last 14d: unq all: 17 23
* notice: prev accum: outdated-unq outdated-all / unq all: 2274 4524 / 2293 4544
* notice: next accum: outdated-unq outdated-all / unq all: 2275 4525 / 2297 4548
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [2024-10-26] / [2024-11-09]

2024-11-08T01:16:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11734242134 # 636
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-08
* notice: last 14d: unq all: 14 20
* notice: prev accum: outdated-unq outdated-all / unq all: 2273 4523 / 2289 4540
* notice: next accum: outdated-unq outdated-all / unq all: 2274 4524 / 2293 4544
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +6 +6 -0 -0 / 6 6
* notice: removed / changed dates: [2024-10-24] / [2024-11-07]

2024-11-07T12:32:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11723047577 # 635