@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-11-10T12:29:45Z",
-  "count_outdated" : 4525,
-  "uniques_outdated" : 2275,
+  "timestamp" : "2024-11-11T12:33:27Z",
+  "count_outdated" : 4526,
+  "uniques_outdated" : 2276,
   "count" : 4549,
   "uniques" : 2298,
   "clones" : [
-    {
-      "timestamp": "2024-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-29T00:00:00Z",
       "count": 1,
