@@ -1,12 +1,7 @@
 {
-  "count": 24,
-  "uniques": 18,
+  "count": 23,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2024-10-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-29T00:00:00Z",
       "count": 1,
